# gears-rust

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  deny-fips.toml  deny.toml
.cypilot/config/: artifacts.toml
.github/: forbidden-words.json
.github/scripts/: check-forbidden-words.sh
.github/workflows/: ci.yml  dco-signoff.yml  forbidden-words.yml
apps/cyberware-example-server/src/: main.rs
config/: e2e-local.yaml  e2e-scope-enforcement.yaml  e2e-tr-authz.yaml  mini-chat.yaml  quickstart-windows.yaml  quickstart.yaml  static-tenants.yaml
docs/: ARCHITECTURE_MANIFEST.md  WHY_GEARS.md
docs/security/: SECURITY.md
docs/security/fips/: PRD.md
docs/security/fips/adrs/: 0001-macos-fips-via-corecrypto-provider.md  0002-fips-feature-target-conditional-shim.md  0003-windows-fips-via-rustls-cng-crypto.md  0004-macos-server-side-tls-via-corecrypto.md  0005-fips-dependency-policy.md
docs/slides/: 2_AUTHN_AUTHZ.html  2_AUTHN_AUTHZ.md
docs/toolkit_unified_system/: 00_gear_overview.md
examples/cyberware-fips-probe/: Cargo.toml  README.md
examples/cyberware-fips-probe/src/: main.rs
examples/modkit/users-info/users-info-server/: Cargo.toml
gears/bss/billing-ledger-balance/docs/: PRD.md
gears/file-storage/docs/: DESIGN.md  PRD.md  api.md  migration.sql
gears/file-storage/docs/ADR/: 0001-cpt-cf-file-storage-adr-proxy-content-traffic.md  0002-cpt-cf-file-storage-adr-content-hash-selection.md  0004-cpt-cf-file-storage-adr-signed-url-transport.md
gears/system/account-management/account-management-sdk/: Cargo.toml
gears/system/api-gateway/: Cargo.toml
gears/system/api-gateway/src/: authn_adapter.rs  config.rs  errors.rs  gear.rs  lib.rs  middleware.rs
gears/system/api-gateway/tests/: access_log_tests.rs  middleware_order.rs  mime_validation_integration.rs  request_id.rs
gears/system/license-resolver/docs/: DESIGN.md  PRD.md
gears/system/license-resolver/docs/ADR/: 0001-cpt-cf-license-resolver-adr-gts-resource-identity.md  0002-cpt-cf-license-resolver-adr-plugin-delegation.md  0003-cpt-cf-license-resolver-adr-typed-licensing-contracts.md
gears/system/oagw/oagw/: Cargo.toml
gears/system/oagw/oagw/src/infra/: metrics.rs
gears/system/usage-collector/docs/: DECOMPOSITION.md  DESIGN.md  domain-model.md  plugin-spi.md  sdk-trait.md  usage-collector-v1.yaml
gears/system/usage-collector/docs/features/: event-deactivation.md  foundation.md  usage-emission.md  usage-query.md  usage-type-lifecycle.md
gears/system/usage-collector/plugins/noop-usage-collector-plugin/: Cargo.toml
gears/system/usage-collector/plugins/noop-usage-collector-plugin/src/: config.rs  config_tests.rs  lib.rs  module.rs  plugin.rs  plugin_tests.rs
gears/system/usage-collector/usage-collector/: Cargo.toml
gears/system/usage-collector/usage-collector-sdk/: Cargo.toml
gears/system/usage-collector/usage-collector-sdk/src/: api.rs  error.rs  gts.rs  lib.rs  models.rs  models_tests.rs  plugin_api.rs  reason.rs  reason_tests.rs
gears/system/usage-collector/usage-collector/src/: config.rs  config_tests.rs  lib.rs  module.rs  module_tests.rs
gears/system/usage-collector/usage-collector/src/api/: mod.rs
gears/system/usage-collector/usage-collector/src/api/rest/: dto.rs  dto_tests.rs  mod.rs
gears/system/usage-collector/usage-collector/src/api/rest/handlers/: mod.rs  usage_records.rs  usage_records_tests.rs  usage_types.rs  usage_types_tests.rs
gears/system/usage-collector/usage-collector/src/api/rest/routes/: mod.rs  usage_records.rs  usage_records_tests.rs  usage_types.rs  usage_types_tests.rs
gears/system/usage-collector/usage-collector/src/domain/: authz.rs  authz_tests.rs  error.rs  error_tests.rs  local_client.rs  local_client_tests.rs  mod.rs  query.rs  query_tests.rs  service.rs  service_tests.rs  test_support.rs  validation.rs  validation_tests.rs
gears/system/usage-collector/usage-collector/src/infra/: mod.rs  sdk_error_mapping.rs  sdk_error_mapping_tests.rs
libs/modkit/: Cargo.toml
libs/modkit-http/: Cargo.toml
libs/modkit-http/src/: builder.rs  tls.rs
libs/modkit/src/bootstrap/: crypto.rs  run.rs
libs/rustls-corecrypto-provider/: Cargo.toml  README.md
libs/rustls-corecrypto-provider/src/: aead.rs  hash.rs  hkdf.rs  hmac.rs  kx.rs  lib.rs  oe.rs  provider.rs  random.rs  tls12.rs  tls13.rs  verify.rs
libs/rustls-corecrypto-provider/src/ffi/: commoncrypto.rs  mod.rs  security.rs
libs/rustls-corecrypto-provider/src/signer/: ec.rs  mod.rs  rsa.rs
libs/rustls-corecrypto-provider/tests/: fips_provider_invariants.rs  handshake_smoke.rs
libs/rustls-fips-shim/: Cargo.toml
libs/rustls-fips-shim/src/: lib.rs
libs/toolkit/: Cargo.toml
libs/toolkit-canonical-errors/src/: builder.rs
libs/toolkit-canonical-errors/tests/: error.rs
libs/toolkit-http-middleware/: Cargo.toml  README.md
libs/toolkit-http-middleware/src/: access_log.rs  auth.rs  auth_tests.rs  common.rs  lib.rs  license_validation.rs  mime_validation.rs  policy.rs  rate_limit.rs  request_id.rs  scope_enforcement.rs
libs/toolkit/src/bootstrap/config/: mod.rs
modules/llm-gateway/docs/: DESIGN.md
modules/mini-chat/deploy/helm/mini-chat/: values.yaml
modules/mini-chat/deploy/helm/mini-chat/templates/: configmap.yaml
modules/system/grpc-hub/: README.md
modules/system/oagw/docs/: DESIGN.md  adr-resource-identification.md
modules/system/oagw/docs/features/: 0002-cpt-cf-oagw-feature-management-api.md
modules/system/oagw/oagw/src/: config.rs  module.rs
modules/system/oagw/oagw/tests/: e2e_smoke_test.rs  management_api_test.rs
modules/system/quota-enforcement/docs/: DESIGN.md
modules/system/types-registry/types-registry-sdk/: Cargo.toml
testing/docker/: docker-compose.yml
testing/e2e/: README.md
testing/e2e/lib/: orchestrator.py
testing/e2e/modules/mini_chat/: conftest.py
testing/e2e/modules/mini_chat/config/: base.yaml
testing/e2e/modules/resource_group/: conftest.py
tools/dylint_lints/de12_documentation/de1201_docs_rs_all_features/tests/: cargo_fixtures.rs
tools/dylint_lints/lint_utils/src/: lib.rs
tools/scripts/: make_help.py
(+14 files in other folders)
