[package]
name = "cyberware-modkit-http"
version = "0.6.5"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit HTTP client library"
readme = "README.md"
keywords = ["cyberfabric", "cyberware", "cyberware-modkit"]
categories = ["web-programming"]

[lib]
name = "modkit_http"

[lints]
workspace = true

[features]
default = []
# FIPS-140-3: the `cyberware-rustls-fips-shim` crate pulls `rustls/fips` and
# `hyper-rustls/fips` ONLY on non-macOS targets (its transitive deps are
# target-gated). On macOS the corecrypto provider replaces the AWS-LC FIPS
# backend, so `rustls/fips` is intentionally NOT activated — that is what
# keeps the aws-lc-fips dylib out of macOS+fips builds.
fips = [
    "dep:rustls-fips-shim",
    "dep:rustls-corecrypto-provider",
    # Forward to corecrypto-provider's own `fips` feature so its
    # `default_provider()` becomes TLS-1.3-only. See modkit::Cargo.toml
    # for the same pattern and rustls-cng-crypto for the upstream reference.
    "rustls-corecrypto-provider/fips",
]
# OpenTelemetry integration for distributed tracing
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
# Core dependencies
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP stack
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = "1.0"
rustls-native-certs = { workspace = true }
rustls-pki-types = { workspace = true }
http-body-util = { workspace = true }
http-body = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
httpdate = { workspace = true }
pin-project-lite = { workspace = true }

# Tower middleware
tower = { workspace = true, features = ["timeout", "limit", "util", "load-shed", "buffer"] }
tower-http = { workspace = true, features = ["decompression-gzip", "decompression-br", "decompression-deflate", "follow-redirect"] }

# HTTP client helpers
serde_urlencoded = { workspace = true }
rand = { workspace = true }

# OpenTelemetry (optional, for distributed tracing)
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# Apple corecrypto-backed rustls CryptoProvider. The crate's `lib.rs` is gated
# on `cfg(target_os = "macos")` so on Linux/Windows it is an empty lib with no
# transitive deps — safe to list unconditionally. Activated by the `fips`
# feature; consumed by `tls.rs::get_crypto_provider` only on macOS.
rustls-corecrypto-provider = { workspace = true, optional = true }

# Workspace-feature-unification shim that activates `rustls/fips` +
# `hyper-rustls/fips` on non-macOS only (see crate Cargo.toml for the
# rationale). Empty lib on every target.
rustls-fips-shim = { workspace = true, optional = true }

[dev-dependencies]
httpmock = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }
