[package]
name = "cf-gears-toolkit-http-middleware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit server-side HTTP middleware (two-plane auth) and request extractors"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["web-programming"]
metadata.docs.rs.all-features = true

[lib]
name = "toolkit_http_middleware"

[lints]
workspace = true

[dependencies]
# SecurityContext + authenticator traits (transport-agnostic). Owns
# `SecurityContext`, the `BearerAuthenticator` / `InternalAuthenticator` traits,
# and the shared `INTERNAL_TOKEN_HEADER` constant.
toolkit-security = { workspace = true }
# Canonical (AIP-193 / RFC 9457) error rendering for middleware rejections.
# `axum` feature provides `IntoResponse for CanonicalError` (problem+json).
toolkit-canonical-errors = { workspace = true, features = ["axum"] }

axum = { workspace = true }
http = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# request_id middleware: X-Request-Id generation/propagation.
tower-http = { workspace = true, features = ["request-id"] }
nanoid = { workspace = true }
# access_log middleware: byte-counting response body wrapper.
bytes = { workspace = true }
http-body = { workspace = true }

# mime/license validation + rate limiting: per-route lookup maps.
dashmap = { workspace = true }
# rate_limit middleware: token-bucket + in-flight limiting.
governor = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
anyhow = { workspace = true }
# scope_enforcement middleware: glob route matching.
glob = { workspace = true }
# MatchitRouteAuthPolicy: per-method route matching for the RouteAuthPolicy impl.
matchit = { workspace = true }
# Deserializable config schemas for the config-driven middleware
# (rate_limit defaults, scope_enforcement rules).
serde = { workspace = true, features = ["derive"] }

# http_metrics middleware: OpenTelemetry instruments. HTTP server metrics are a
# baseline capability for every gear serving HTTP, so this is unconditional.
# When no meter provider is installed the global meter is a no-op (near-zero cost).
opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
