[package]
name = "users-info-server"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Standalone server binary for the users-info example module"

[lints]
workspace = true

[features]
default = []
# FIPS-140-3: enable FIPS-validated crypto provider in transitive TLS deps
fips = ["modkit/fips"]

[dependencies]
# ModKit bootstrap (host mode)
modkit = { workspace = true, features = ["bootstrap"] }

# System modules (minimum set for users-info)
api_gateway = { package = "cyberware-api-gateway", path = "../../../../modules/system/api-gateway" }
grpc_hub = { package = "cyberware-grpc-hub", path = "../../../../modules/system/grpc-hub" }
types_registry = { package = "cyberware-types-registry", path = "../../../../modules/system/types-registry/types-registry" }
authn-resolver = { package = "cyberware-authn-resolver", path = "../../../../modules/system/authn-resolver/authn-resolver" }
authz-resolver = { package = "cyberware-authz-resolver", path = "../../../../modules/system/authz-resolver/authz-resolver" }
tenant-resolver = { package = "cyberware-tenant-resolver", path = "../../../../modules/system/tenant-resolver/tenant-resolver" }

# Static plugins for standalone operation
static-authn-plugin = { package = "cyberware-static-authn-plugin", path = "../../../../modules/system/authn-resolver/plugins/static-authn-plugin" }
static-authz-plugin = { package = "cyberware-static-authz-plugin", path = "../../../../modules/system/authz-resolver/plugins/static-authz-plugin" }
single-tenant-tr-plugin = { package = "cyberware-single-tenant-tr-plugin", path = "../../../../modules/system/tenant-resolver/plugins/single-tenant-tr-plugin" }

# Target module
users-info = { path = "../users-info", default-features = true }

# Runtime dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
